Fix Go tests on Java 8